; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bmake/extr_suff.c_Suff_AddTransform.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bmake/extr_suff.c_Suff_AddTransform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i8*, i8* }
%struct.TYPE_9__ = type { i8*, i32, i32 }

@transforms = common dso_local global i32 0, align 4
@SuffGNHasNameP = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@OP_TRANSFORM = common dso_local global i32 0, align 4
@SUFF = common dso_local global i32 0, align 4
@debug_file = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"defining transformation from `%s' to `%s'\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_10__* @Suff_AddTransform(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i32, i32* @transforms, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = load i32, i32* @SuffGNHasNameP, align 4
  %10 = call i32* @Lst_Find(i32 %7, i8* %8, i32 %9)
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %1
  %14 = load i8*, i8** %2, align 8
  %15 = call %struct.TYPE_10__* @Targ_NewGN(i8* %14)
  store %struct.TYPE_10__* %15, %struct.TYPE_10__** %3, align 8
  %16 = load i32, i32* @transforms, align 4
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %18 = call i32 @Lst_AtEnd(i32 %16, %struct.TYPE_10__* %17)
  br label %39

19:                                               ; preds = %1
  %20 = load i32*, i32** %6, align 8
  %21 = call i64 @Lst_Datum(i32* %20)
  %22 = inttoptr i64 %21 to %struct.TYPE_10__*
  store %struct.TYPE_10__* %22, %struct.TYPE_10__** %3, align 8
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %23, i32 0, i32 2
  %25 = load i8*, i8** %24, align 8
  %26 = call i32 @Lst_Destroy(i8* %25, i32* null)
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 1
  %29 = load i8*, i8** %28, align 8
  %30 = call i32 @Lst_Destroy(i8* %29, i32* null)
  %31 = load i32, i32* @FALSE, align 4
  %32 = call i8* @Lst_Init(i32 %31)
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %33, i32 0, i32 2
  store i8* %32, i8** %34, align 8
  %35 = load i32, i32* @FALSE, align 4
  %36 = call i8* @Lst_Init(i32 %35)
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 1
  store i8* %36, i8** %38, align 8
  br label %39

39:                                               ; preds = %19, %13
  %40 = load i32, i32* @OP_TRANSFORM, align 4
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %41, i32 0, i32 0
  store i32 %40, i32* %42, align 8
  %43 = load i8*, i8** %2, align 8
  %44 = call i32 @SuffParseTransform(i8* %43, %struct.TYPE_9__** %4, %struct.TYPE_9__** %5)
  %45 = load i32, i32* @SUFF, align 4
  %46 = call i64 @DEBUG(i32 %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %57

48:                                               ; preds = %39
  %49 = load i32, i32* @debug_file, align 4
  %50 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %50, i32 0, i32 0
  %52 = load i8*, i8** %51, align 8
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %54 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %53, i32 0, i32 0
  %55 = load i8*, i8** %54, align 8
  %56 = call i32 @fprintf(i32 %49, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i8* %52, i8* %55)
  br label %57

57:                                               ; preds = %48, %39
  %58 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %59 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %58, i32 0, i32 2
  %60 = load i32, i32* %59, align 4
  %61 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %62 = call i32 @SuffInsert(i32 %60, %struct.TYPE_9__* %61)
  %63 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %63, i32 0, i32 1
  %65 = load i32, i32* %64, align 8
  %66 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %67 = call i32 @SuffInsert(i32 %65, %struct.TYPE_9__* %66)
  %68 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  ret %struct.TYPE_10__* %68
}

declare dso_local i32* @Lst_Find(i32, i8*, i32) #1

declare dso_local %struct.TYPE_10__* @Targ_NewGN(i8*) #1

declare dso_local i32 @Lst_AtEnd(i32, %struct.TYPE_10__*) #1

declare dso_local i64 @Lst_Datum(i32*) #1

declare dso_local i32 @Lst_Destroy(i8*, i32*) #1

declare dso_local i8* @Lst_Init(i32) #1

declare dso_local i32 @SuffParseTransform(i8*, %struct.TYPE_9__**, %struct.TYPE_9__**) #1

declare dso_local i64 @DEBUG(i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*) #1

declare dso_local i32 @SuffInsert(i32, %struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
